# OBSERVIQ

./: .gitignore  netlify.toml  package-lock.json  package.json  vercel.json
observiq-backend/: .gitignore  requirements.txt
observiq-backend/app/: config.py  main.py
observiq-backend/app/models/: schemas.py
observiq-backend/app/routers/: analytics.py  anomalies.py  health.py  teams.py  traces.py
observiq-backend/app/utils/: api_keys.py  auth.py
observiq-backend/observiq-sdk/: setup.py
observiq-backend/observiq-sdk/observiq_sdk/: __init__.py  sender.py
observiq-backend/supabase/migrations/: 001_create_teams.sql  002_create_traces_table.sql
observiq-dashboard/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
observiq-dashboard/app/: globals.css  layout.js  page.js
observiq-dashboard/app/dashboard/: layout.tsx  page.tsx
observiq-dashboard/app/dashboard/analytics/: page.tsx
observiq-dashboard/app/dashboard/anomalies/: page.tsx
observiq-dashboard/app/login/: page.tsx
observiq-dashboard/app/signup/: page.tsx
observiq-dashboard/components/: AnalyticsSection.jsx  AnomaliesSection.jsx  Dashboard.jsx  Header.jsx  LiveBadge.tsx  LoginScreen.jsx  PageShell.jsx  RegisterScreen.jsx  Sidebar.tsx  StatsCard.tsx  StatsGrid.jsx  StatusBadge.tsx  TracesTable.jsx  TracesTable.tsx
observiq-dashboard/hooks/: useTraces.ts
observiq-dashboard/lib/: api.ts  types.ts
observiq-sdk/: README.md  pyproject.toml
observiq-sdk/examples/: groq_example.py
observiq-sdk/observiq_sdk/: client.py  sender.py
(+1 files in other folders)
