[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observiq-sdk"
version = "0.1.0"
description = "Production-grade AI application observability SDK — monitor every LLM call automatically"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Prince", email = "adarshgupta1@gmail.com" }
]
keywords = ["observability", "llm", "monitoring", "ai", "groq", "openai", "tracing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "requests>=2.28.0",
]

[project.urls]
Homepage = "https://observiq.io"
Documentation = "https://docs.observiq.io"
Repository = "https://github.com/yourusername/observiq-sdk"
"Bug Tracker" = "https://github.com/yourusername/observiq-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["observiq_sdk*"]